--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,6 @@
 {
   "hosting": {
-    "port": 5000,
-    "host": "0.0.0.0",
-    "public": "public/index.html",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
